--- a/src/App.css
+++ b/src/App.css
@@ -19,13 +19,13 @@
   flex-direction: column;
 }
 
-.app_nav {
-  padding: 30px;
+.app_navbar {
+  padding: 10px;
   box-shadow: 0 1px 20px rgba(56, 40, 40, 0.05);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
-  background-color: #fff;
+  background-color: rgba(0, 0, 0, 0.12);
 }
 
 .app_boards_container {
@@ -33,7 +33,7 @@
   width: 100%;
   height: 100%;
   overflow-x: auto;
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 .app_boards {
@@ -42,25 +42,6 @@
   padding: 10px 30px;
   display: flex;
   gap: 30px;
-}
-
-.app_boards_last {
-  flex-basis: 290px;
-  min-width: 290px;
-}
-
-.app_boards_add-board {
-  background-color: #fff;
-  color: #000;
-  border-radius: 10px;
-  box-shadow: 1px 1px 0 1px rgba(0, 0, 0, 0.12);
-  width: 100%;
-  text-align: center;
-}
-.app_boards_add-board_edit {
-  background-color: #fff;
-  border-radius: 10px;
-  padding: 10px;
 }
 
 .app_title{
