--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,6 +1,6 @@
 .board {
-    min-width: 290px;
-    width: 290px;
+    /* min-width: 280px; */
+    width: 280px;
     max-height: 100%;
     flex-basis: 290px;
     display: flex;
@@ -16,20 +16,11 @@
 
 .board_top_title {
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1.2rem;
     display: flex;
     gap: 5px;
     align-items: center;
     color: red;
-}
-
-.board_top_title span {
-    color: rgb(145, 145, 145);
-}
-
-.board_top_title_more {
-    cursor: pointer;
-    position: relative;
 }
 
 .board_cards {
@@ -42,17 +33,3 @@
     overflow-y: auto;
 }
 
-.board_add-card {
-    background-color: #fff;
-    color: #000;
-    border-radius: 10px;
-    box-shadow: 1px 1px 0 1px rgba(0, 0, 0, 0.12);
-    width: 100%;
-    text-align: center;
-}
-
-.board_add-card_edit {
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 10px;
-}
