--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -17,12 +17,13 @@
   
   .card_footer {
     display: flex;
-    margin-left: 155px;
+    margin-left: 140px;
     margin-top: 20px;
     align-items: center;
   }
 
  .card_footer p{
    cursor: pointer;
+   margin: 0px 5px;
  }
   
